# kittengame

./: Cargo.toml  README  README.md
arena/: Cargo.toml
arena/src/: lib.rs
internal/: Cargo.toml  main.wgsl
internal/src/: data.rs  internal.rs  lib.rs  renderpass.rs
internal/src/types/: framebuffer.rs  mod.rs  pipeline.rs  render_attachments.rs  texture.rs  uniform.rs  vertex.rs
internal/src/types/shader/: mod.rs  parsing.rs
internal/tests/: init.rs
purs/: Cargo.toml
purs/src/: gen.rs  info.rs  lib.rs
shaders/: fullscreen_triangle.wgsl  main.wgsl
src/: main.rs
src/lib/: lib.rs
src/window/: mod.rs  state.rs
window/: Cargo.toml
window/src/: lib.rs  state.rs  traits.rs
