[package]
name = "kittengpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["internal", "arena", "window", "purs"]
resolver = "2"

[dependencies]
internal = { path = "internal"}
window = { path = "window"}
anyhow = "1.0.68"


[profile.release]
debug = 1
incremental = true
lto = "off"
