[package]
name = "kittengame"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["internal", "arena", "purs", "window"]
resolver = "2"

[dependencies]
internal = { path = "internal" }
window = { path = "window" }
anyhow = "1.0.68"
glam = { version = "0.24.1", features = ["bytemuck", "serde", "mint"] }
env_logger = "0.10.0"
log = "0.4.19"
bevy_ecs = "0.11.0"

[profile.release]
debug = 1
incremental = true
lto = "off"
