[package]
name = "arena"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.2.1", optional = true,  features = ["v4"] }
serde = { version = "1.0.147", optional = true, features = ["derive"] }
serde_json = "1.0.88"