[package]
name = "window"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
glam = { version = "0.24.1", features = ["bytemuck", "serde", "mint"] }
raw-window-handle = "0.5.0"
winit = { version = "0.29.0-beta.0", features = ["mint"] }
log = "0.4.19"
